force-app/main/default/objects/NCMT_Uniformat_Data__c/NCMT_Uniformat_Data__c.object-meta.xml
<CustomObject>
    <description>BI Table: NCMT Uniformat Report Data</description>
    <label>NCMT Uniformat Data</label>
    <nameField>
        <displayFormat>U-{0000000}</displayFormat>
        <label>NCMT Uniformat Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Uniformat Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>