force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/Core_Shell_Cost__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Core/Shell Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>