force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ECC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>