force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/ECCA_GSF__c.field-meta.xml
<CustomField>
    <fullName>ECCA_GSF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ECCA/GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>