force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/ETPC__c.field-meta.xml
<CustomField>
    <fullName>ETPC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ETPC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>