force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/ETPC_shell_Parameter__c.field-meta.xml
<CustomField>
    <fullName>ETPC_shell_Parameter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ETPC(shell)/ Parameter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>