force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/Profile_of_Cost__c.field-meta.xml
<CustomField>
    <fullName>Profile_of_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Profile of Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>