force-app/main/default/objects/NCMT_Uniformat_Data__c/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <label>Work Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>