force-app/main/default/objects/NCMT_Uniformat_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Work_Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>UOM__c</columns>
    <columns>Core_Shell_Cost__c</columns>
    <columns>TRCS_Cost__c</columns>
    <columns>Tenant_Imp_Cost__c</columns>
    <columns>Blast_Security_Cost__c</columns>
    <columns>Parking_Cost__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>ETPC_shell_Parameter__c</columns>
    <columns>Profile_of_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>